// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SetupSending disables the verification button while submitting 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        We recommend DNS verification, but if you don't have DNS access, you can 
        <a>
          set this domain up for sending via email
        </a>
        .
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Component
          header={
            Array [
              null,
              <div
                style={
                  Object {
                    "width": 40,
                  }
                }
              >
                 Type 
              </div>,
              <div
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                 Hostname 
              </div>,
              <div
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                 Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    disabled={true}
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verifying...
                  </Button>
                   
                </div>
              </div>,
            ]
          }
          rows={
            Array [
              Array [
                <ReadyForIcon
                  readyFor={
                    Object {
                      "bounce": false,
                      "dkim": false,
                      "sending": false,
                    }
                  }
                />,
                "TXT",
                <LongTextContainer
                  text="scph0118._domainkey.xyz.com"
                />,
                <LongTextContainer
                  text="v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB"
                />,
              ],
            ]
          }
        />
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly for unverified DKIM and invalid ownership with mailbox verification disabled 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        <strong>
          To use this domain for sending
        </strong>
        , add this TXT record to your DNS settings, paying close attention to the specified hostname.
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Component
          header={
            Array [
              null,
              <div
                style={
                  Object {
                    "width": 40,
                  }
                }
              >
                 Type 
              </div>,
              <div
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                 Hostname 
              </div>,
              <div
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                 Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    disabled={false}
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </div>,
            ]
          }
          rows={
            Array [
              Array [
                <ReadyForIcon
                  readyFor={
                    Object {
                      "bounce": false,
                      "dkim": false,
                      "sending": false,
                    }
                  }
                />,
                "TXT",
                <LongTextContainer
                  text="scph0118._domainkey.xyz.com"
                />,
                <LongTextContainer
                  text="v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB"
                />,
              ],
            ]
          }
        />
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly for unverified DKIM and invalid ownership with mailbox verification enabled 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        We recommend DNS verification, but if you don't have DNS access, you can 
        <a>
          set this domain up for sending via email
        </a>
        .
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Component
          header={
            Array [
              null,
              <div
                style={
                  Object {
                    "width": 40,
                  }
                }
              >
                 Type 
              </div>,
              <div
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                 Hostname 
              </div>,
              <div
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                 Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    disabled={false}
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </div>,
            ]
          }
          rows={
            Array [
              Array [
                <ReadyForIcon
                  readyFor={
                    Object {
                      "bounce": false,
                      "dkim": false,
                      "sending": false,
                    }
                  }
                />,
                "TXT",
                <LongTextContainer
                  text="scph0118._domainkey.xyz.com"
                />,
                <LongTextContainer
                  text="v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB"
                />,
              ],
            ]
          }
        />
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly when ownership and DKIM are verified 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <p>
        This domain is all set up to send with DKIM-signing. Nice work!
      </p>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Component
          header={
            Array [
              null,
              <div
                style={
                  Object {
                    "width": 40,
                  }
                }
              >
                 Type 
              </div>,
              <div
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                 Hostname 
              </div>,
              <div
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                 Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    disabled={false}
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </div>,
            ]
          }
          rows={
            Array [
              Array [
                <ReadyForIcon
                  readyFor={
                    Object {
                      "bounce": false,
                      "dkim": true,
                      "sending": true,
                    }
                  }
                />,
                "TXT",
                <LongTextContainer
                  text="scph0118._domainkey.xyz.com"
                />,
                <LongTextContainer
                  text="v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB"
                />,
              ],
            ]
          }
        />
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: SetupSending renders correctly when ownership is valid and DKIM is unverified 1`] = `
<Component
  sectioned={true}
  title="Set Up For Sending"
>
  <Grid>
    <Grid.Column
      md={4}
      xs={12}
    >
      <Banner
        status="warning"
      >
        This domain is "ready for sending" but if you plan to use it for sending, we still recommend that you add this TXT record to make it "ready for DKIM" as well.
      </Banner>
    </Grid.Column>
    <Grid.Column
      md={8}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <Component
          header={
            Array [
              null,
              <div
                style={
                  Object {
                    "width": 40,
                  }
                }
              >
                 Type 
              </div>,
              <div
                style={
                  Object {
                    "width": 160,
                  }
                }
              >
                 Hostname 
              </div>,
              <div
                style={
                  Object {
                    "width": 220,
                  }
                }
              >
                 Value 
                <div
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                   
                  <Button
                    disabled={false}
                    onClick={[Function]}
                    plain={true}
                    size="default"
                  >
                    Verify TXT Record
                  </Button>
                   
                </div>
              </div>,
            ]
          }
          rows={
            Array [
              Array [
                <ReadyForIcon
                  readyFor={
                    Object {
                      "bounce": false,
                      "dkim": false,
                      "sending": true,
                    }
                  }
                />,
                "TXT",
                <LongTextContainer
                  text="scph0118._domainkey.xyz.com"
                />,
                <LongTextContainer
                  text="v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB"
                />,
              ],
            ]
          }
        />
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;
